# gaussdb-rust

./: .env.remote  .gitignore  ARCHITECTURE_TEST_CONFIG.md  CHANGELOG.md  CHANGELOG_FEATURES.md  COMMIT_MESSAGE.txt  CRATES_IO_PUBLICATION_PLAN.md  CRATES_IO_RELEASE_ANALYSIS.md  Cargo.toml  FEATURES.md  FEATURE_GUIDE_CN.md  FEATURE_IMPLEMENTATION_REPORT.md  FEATURE_SUMMARY.md  FINAL_REPORT.md  GLOBAL_ENV_CONFIG_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_TO_GLOBAL_CONFIG.md  README-zh.md  README.md  TEST_ENV_CONFIG.md  docker-compose-opengauss.yml  env.example  pr.md  test.md
.github/workflows/: ci.yml
codegen/: Cargo.toml
docker/: opengauss_init.sh  opengauss_setup.sh
docs/: GaussDB-PostgreSQL-差异分析报告.md  README.md  authentication.md  compatibility-en.md  compatibility-zh.md
examples/: Cargo.toml  README.md  async_basic.rs  sync_basic.rs
examples/src/: async_authentication.rs  async_basic.rs  gaussdb_auth_debug.rs  gaussdb_auth_solutions.rs  lib.rs  scram_compatibility_test.rs  simple_async.rs  simple_sync.rs  stress_test.rs  sync_authentication.rs  sync_basic.rs  sync_transactions.rs
gaussdb/: CHANGELOG.md  Cargo.toml
gaussdb-derive/: Cargo.toml
gaussdb-derive-test/: Cargo.toml
gaussdb-derive-test/src/: composites.rs  domains.rs  enums.rs  lib.rs  transparent.rs
gaussdb-derive-test/src/compile-fail/: invalid-allow-mismatch.rs  invalid-allow-mismatch.stderr  invalid-transparent.rs  invalid-transparent.stderr  invalid-types.rs  unknown-override.rs  unknown-override.stderr
gaussdb-derive/src/: accepts.rs  composites.rs  fromsql.rs  lib.rs  overrides.rs  tosql.rs
gaussdb-native-tls/: CHANGELOG.md  Cargo.toml
gaussdb-native-tls/src/: lib.rs  test.rs
gaussdb-openssl/: CHANGELOG.md  Cargo.toml
gaussdb-openssl/src/: lib.rs  test.rs
gaussdb-protocol/: CHANGELOG.md  Cargo.toml
gaussdb-protocol/src/: lib.rs
gaussdb-protocol/src/authentication/: gaussdb_sasl.rs  mod.rs  sasl.rs
gaussdb-protocol/src/message/: backend.rs
gaussdb-test-helpers/: Cargo.toml  README.md
gaussdb-test-helpers/src/: lib.rs
gaussdb-types/: Cargo.toml
gaussdb-types/src/: bit_vec_06.rs  chrono_04.rs  cidr_02.rs  cidr_03.rs  eui48_04.rs  eui48_1.rs  geo_types_06.rs  geo_types_07.rs  jiff_01.rs  jiff_02.rs  lib.rs  pg_lsn.rs  special.rs  time_02.rs  time_03.rs  uuid_08.rs  uuid_1.rs
gaussdb/benches/: bench.rs
gaussdb/src/: binary_copy.rs  cancel_token.rs  client.rs  config.rs  connection.rs  copy_in_writer.rs  copy_out_reader.rs  lib.rs  row_iter.rs  test.rs  transaction.rs  transaction_builder.rs
postgres-derive-test/src/: domains.rs
postgres-openssl/: Cargo.toml
postgres-openssl/src/: test.rs
postgres-protocol/: Cargo.toml
postgres-protocol/src/authentication/: mod.rs
postgres/src/: test.rs
scripts/: README.md  ci-test.sh  publish-to-crates.sh  verify-ci.sh
tokio-gaussdb/: CHANGELOG.md  Cargo.toml
tokio-gaussdb/benches/: bench.rs
tokio-gaussdb/src/: adaptive_auth.rs  binary_copy.rs  bind.rs  cancel_query_raw.rs  client.rs  codec.rs  config.rs  connect_raw.rs  connect_tls.rs  connection.rs  copy_in.rs  copy_out.rs  gaussdb_auth_test.rs  lib.rs  portal.rs  prepare.rs  query.rs  row.rs  simple_query.rs  statement.rs  transaction.rs  transaction_builder.rs  types.rs
tokio-gaussdb/src/error/: mod.rs
tokio-gaussdb/tests/: gaussdb_auth_test.rs  scram_integration_tests.rs
tokio-gaussdb/tests/test/: binary_copy.rs  main.rs  parse.rs  runtime.rs
tokio-gaussdb/tests/test/types/: chrono_04.rs  jiff_01.rs  jiff_02.rs  mod.rs  smol_str_01.rs  time_02.rs  time_03.rs
tokio-postgres/src/: connect_raw.rs  gaussdb_auth_test.rs  lib.rs
tokio-postgres/tests/test/: runtime.rs
