[package]
name = "gaussdb-examples"
version = "0.1.1"
edition = "2021"
authors = ["GaussDB Rust Team <gaussdb-rust@example.com>"]
description = "Examples for the gaussdb-rust library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HuaweiCloudDeveloper/gaussdb-rust"
documentation = "https://docs.rs/gaussdb"
keywords = ["database", "gaussdb", "opengauss", "postgresql", "examples"]
categories = ["database"]

[dependencies]
# Core GaussDB libraries
gaussdb = { path = "../gaussdb", version = "0.1.1" }
tokio-gaussdb = { path = "../tokio-gaussdb", version = "0.1.1" }
gaussdb-types = { path = "../gaussdb-types", version = "0.1.1" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# TLS support
native-tls = "0.2"
tokio-native-tls = "0.3"

# Utilities
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and debugging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Optional features for advanced examples
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
bit-vec = { version = "0.6", optional = true }

[features]
default = []
# Enable all type support features
with-uuid = ["dep:uuid", "gaussdb-types/with-uuid-1", "tokio-gaussdb/with-uuid-1"]
with-bit-vec = ["dep:bit-vec", "gaussdb-types/with-bit-vec-0_6", "tokio-gaussdb/with-bit-vec-0_6"]
with-chrono = ["gaussdb-types/with-chrono-0_4", "tokio-gaussdb/with-chrono-0_4"]
with-serde-json = ["gaussdb-types/with-serde_json-1", "tokio-gaussdb/with-serde_json-1"]

# All features enabled
full = ["with-uuid", "with-bit-vec", "with-chrono", "with-serde-json"]

[[bin]]
name = "simple_sync"
path = "src/simple_sync.rs"

[[bin]]
name = "simple_async"
path = "src/simple_async.rs"

[[bin]]
name = "gaussdb_auth_debug"
path = "src/gaussdb_auth_debug.rs"

[[bin]]
name = "gaussdb_auth_solutions"
path = "src/gaussdb_auth_solutions.rs"

[[bin]]
name = "scram_compatibility_test"
path = "src/scram_compatibility_test.rs"

[[bin]]
name = "stress_test"
path = "src/stress_test.rs"

[dev-dependencies]
# Testing utilities
tempfile = "3.0"
serial_test = "3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
