[package]
name = "gaussdb-derive-test"
version = "0.1.1"
authors = ["Steven Fackler <sfackler@gmail.com>", "louloulin <729883852@qq.com>"]
edition = "2018"

[dev-dependencies]
trybuild = "1.0"
gaussdb-test-helpers = { path = "../gaussdb-test-helpers" }

gaussdb-types = { path = "../gaussdb-types", features = ["derive"] }
gaussdb = { path = "../gaussdb" }
