[package]
name = "gaussdb-native-tls"
version = "0.5.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "TLS support for tokio-postgres via native-tls"
repository = "https://github.com/sfackler/rust-postgres"
readme = "../README.md"

[badges]
circle-ci = { repository = "sfackler/rust-postgres" }

[features]
default = ["runtime"]
runtime = ["tokio-gaussdb/runtime"]

[dependencies]
native-tls = { version = "0.2", features = ["alpn"] }
tokio = "1.0"
tokio-native-tls = "0.3"
tokio-gaussdb = { version = "0.1.1", path = "../tokio-gaussdb", default-features = false }

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1.0", features = ["macros", "net", "rt"] }
gaussdb = { version = "0.1.1", path = "../gaussdb" }
