[package]
name = "gaussdb-openssl"
version = "0.5.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "TLS support for tokio-postgres via openssl"
repository = "https://github.com/sfackler/rust-postgres"
readme = "../README.md"

[badges]
circle-ci = { repository = "sfackler/rust-postgres" }

[features]
default = ["runtime"]
runtime = ["tokio-gaussdb/runtime"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio = "1.0"
tokio-openssl = "0.6"
tokio-gaussdb = { version = "0.1.1", path = "../tokio-gaussdb", default-features = false }

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1.0", features = ["macros", "net", "rt"] }
gaussdb = { version = "0.1.1", path = "../gaussdb" }
