[package]
name = "gaussdb-protocol"
version = "0.1.1"
authors = ["Steven Fackler <sfackler@gmail.com>", "louloulin <729883852@qq.com>"]
edition = "2018"
description = "Low level GaussDB protocol APIs based on PostgreSQL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HuaweiCloudDeveloper/gaussdb-rust"
readme = "../README.md"

[features]
default = ["opengauss"]
opengauss = []
gauss = []
js = ["getrandom/wasm_js"]

[dependencies]
base64 = "0.22"
byteorder = "1.0"
bytes = "1.0"
fallible-iterator = "0.2"
hex = "0.4"
hmac = "0.12"
md-5 = "0.10"
memchr = "2.0"
pbkdf2 = "0.12"
rand = "0.9"
sha1 = "0.10"
sha2 = "0.10"
stringprep = "0.1"
getrandom = { version = "0.3", optional = true }
