[package]
name = "tokio-gaussdb"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>", "louloulin <729883852@qq.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A native, asynchronous GaussDB client based on PostgreSQL"
repository = "https://github.com/HuaweiCloudDeveloper/gaussdb-rust"
readme = "../README.md"
keywords = ["database", "gaussdb", "opengauss", "postgresql", "sql", "async"]
categories = ["database"]

[lib]
test = false

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "sfackler/rust-postgres" }

[features]
default = ["runtime"]
runtime = ["tokio/net", "tokio/time"]

array-impls = ["gaussdb-types/array-impls"]
with-bit-vec-0_6 = ["gaussdb-types/with-bit-vec-0_6"]
with-chrono-0_4 = ["gaussdb-types/with-chrono-0_4"]
with-cidr-0_2 = ["gaussdb-types/with-cidr-0_2"]
with-cidr-0_3 = ["gaussdb-types/with-cidr-0_3"]
with-eui48-0_4 = ["gaussdb-types/with-eui48-0_4"]
with-eui48-1 = ["gaussdb-types/with-eui48-1"]
with-geo-types-0_6 = ["gaussdb-types/with-geo-types-0_6"]
with-geo-types-0_7 = ["gaussdb-types/with-geo-types-0_7"]
with-jiff-0_1 = ["gaussdb-types/with-jiff-0_1"]
with-jiff-0_2 = ["gaussdb-types/with-jiff-0_2"]
with-serde_json-1 = ["gaussdb-types/with-serde_json-1"]
with-smol_str-01 = ["gaussdb-types/with-smol_str-01"]
with-uuid-0_8 = ["gaussdb-types/with-uuid-0_8"]
with-uuid-1 = ["gaussdb-types/with-uuid-1"]
with-time-0_2 = ["gaussdb-types/with-time-0_2"]
with-time-0_3 = ["gaussdb-types/with-time-0_3"]
js = ["gaussdb-protocol/js", "gaussdb-types/js"]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
byteorder = "1.0"
fallible-iterator = "0.2"
futures-channel = { version = "0.3", features = ["sink"] }
futures-util = { version = "0.3", features = ["sink"] }
log = "0.4"
parking_lot = "0.12"
percent-encoding = "2.0"
pin-project-lite = "0.2"
phf = "0.11"
gaussdb-protocol = { version = "0.1.0", path = "../gaussdb-protocol" }
gaussdb-types = { version = "0.1.0", path = "../gaussdb-types" }
tokio = { version = "1.27", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
rand = "0.9.0"
whoami = "1.4.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
futures-executor = "0.3"
criterion = "0.6"
env_logger = "0.11"
tokio = { version = "1.0", features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "time",
] }

bit-vec-06 = { version = "0.6", package = "bit-vec" }
chrono-04 = { version = "0.4", package = "chrono", default-features = false }
eui48-1 = { version = "1.0", package = "eui48", default-features = false }
geo-types-06 = { version = "0.6", package = "geo-types" }
geo-types-07 = { version = "0.7", package = "geo-types" }
jiff-01 = { version = "0.1", package = "jiff" }
jiff-02 = { version = "0.2", package = "jiff" }
serde-1 = { version = "1.0", package = "serde" }
serde_json-1 = { version = "1.0", package = "serde_json" }
smol_str-01 = { version = "0.1", package = "smol_str" }
uuid-08 = { version = "0.8", package = "uuid" }
uuid-1 = { version = "1.0", package = "uuid" }
time-02 = { version = "0.2", package = "time" }
time-03 = { version = "0.3", package = "time", features = ["parsing"] }
